--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -138,49 +138,44 @@
   background: #C3B6EC;
   padding: 15px;
   height: 100vh;
-}
-
-.show-intro {
-  width: 325px;
-  height: 300px;
-  top: 6px;
-  left: 50px;
-  border: 5px black;
-  box-shadow: 15px 0px 10px -10px rgba(0, 0, 0, 0.51);
-  padding-top: 8px;
-  position: relative;
-  flex-shrink: 0;
-  border-radius: 20px 0px 0px 0px;
-  background: linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), #F8F7FD;
-  h1, h2, h3 {
-    color: #000;
+  .greeting-and-info {
+    margin-top: 56px;
   }
-  .greeting {
-    width: fit-content;
-    margin: 15px 0px 0px 90px;
-    h1 {
-      font-size: 28px;
-      font-weight: 700;
+  .show-intro {
+    width: 310px;
+    height: 300px;
+    top: 6px;
+    left: 65px;
+    border: 5px black;
+    box-shadow: 15px 0px 10px -10px rgba(0, 0, 0, 0.51);
+    padding-top: 8px;
+    position: relative;
+    flex-shrink: 0;
+    border-radius: 20px 0px 0px 0px;
+    background: linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), #F8F7FD;
+    h1, h2, h3 {
+      color: #000;
     }
-  }
-  .show-info{
-    width: 248px;
-    margin-left: 90px;
-  }
-  h2 {
-    font-size: 16px;
-    line-height: normal;
-    font-weight: 400;
-  }
-  h3 {
-    font-size: 16px;
-    line-height: 22px;
-  }
-  .pfp_show {
-    img{
-      width: 110px;
-      height: 110px;
-      border-radius: 20px;
+    .greeting {
+      width: fit-content;
+      margin: 15px 0px 0px 90px;
+      h1 {
+        font-size: 28px;
+        font-weight: 700;
+      }
+    }
+    .show-info{
+      width: 248px;
+      margin-left: 90px;
+    }
+    h2 {
+      font-size: 16px;
+      line-height: normal;
+      font-weight: 400;
+    }
+    h3 {
+      font-size: 16px;
+      line-height: 22px;
     }
   }
 }
