--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -69,3 +69,12 @@
 .img-flex {
   display: flex;
 }
+
+.show-pfp {
+  width: 110px;
+  height: 110px;
+  border-radius: 10px;
+  position: absolute;
+  right: 250px;
+  top: 65px;
+}
