--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,10 +6,14 @@
     <div class="greeting-and-info">
       <div class="greeting">
         <% if @post.user.photo.attached? %>
+          <%= link_to user_path do %>
             <%= cl_image_tag @post.user.photo.key, class: "show-pfp" %>
-          <% else %>
-            <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png", class: "photo" %>
           <% end %>
+        <% else %>
+          <%= link_to user_path do %>
+            <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png", class: "show-pfp" %>
+          <% end %>
+        <% end %>
         <h1>This is <%= @post.user.name %> </h1>
       </div>
       <div class="show-info">
