--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -256,7 +256,7 @@
       font-weight: 600;
     }
     h3{
-      
+
       margin-left: -30px;
     }
   }
@@ -267,7 +267,8 @@
       font-size: 30px;
       font-weight: 600;
     }
-    
+  }
+
   .usersshow-about-me {
     h2 {
       margin-top: 20px;
