--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -155,6 +155,7 @@
     background: linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), #F8F7FD;
     h1, h2, h3 {
       color: #000;
+      max-width: 219px;
     }
     .greeting {
       width: fit-content;
@@ -184,25 +185,23 @@
   width: 314px;
   height: 239px;
   position: relative;
-  left: -26px;
-  top: -61px;
+  right: 10px;
+  bottom: 59px;
   flex-shrink: 0;
   padding: 20px;
   border: 5px black;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 10px -5px 10px rgba(0, 0, 0, 0.3);
   border-radius: 20px;
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   background: linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), linear-gradient(0deg, #F8F7FD 0%, #F8F7FD 100%), #F8F7FD;
-  .h4{
-    font-size: 16px;
-    font-weight: 700;
-    padding-left: 5px;
-  }
-  .h4-description {
-    font-size: 14px;
-    padding-left: 5px;
+  .post-user-info{
+    padding: 5px;
+    margin-top: 5px;
+    h4 {
+      font-size: 18px;
+    }
   }
 }
 
