--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -66,8 +66,12 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
+    .mb-3 {
+      margin-bottom: 0!important;
+    }
     .btn {
-      color: white
+      color: white;
+      font-size: 22px;
     }
   }
 }
