--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -76,6 +76,25 @@
   }
 }
 
+.go-to-review-btn {
+  display: flex;
+  justify-content: center;
+  width: 110px;
+  height: 50px;
+  border-radius: 20px;
+  background: #D5795D;
+  position: absolute;
+  bottom: 485px;
+  left: 235px;
+  p {
+    text-decoration: none;
+    color: #FFF;
+    align-self: center;
+    font-size: 20px;
+    margin: 0;
+  }
+}
+
 .see-more-btn {
   margin-top: 20px;
   margin-left: 0px;
