updated toggle font colors so it's more readable

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -44,10 +44,11 @@
   }
   #helper-placeholder {
     font-size: 15px;
-    color: grey;
+    color: #05030c;
   }
   #asker-placeholder {
     font-size: 15px;
+    color: #05030c;
   }
 }
 
