--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,13 +1,21 @@
-<% @chatrooms.each do |chat| %>
-  <% if chat.asker == current_user %>
-    <%= link_to chat.helper.name, chatroom_path(chat) %>
-    <% last_user = chat.messages.last.user  %>
-    <%= last_user == current_user ? "you:" : last_user.name %>
-    <%= chat.messages.last.content %>
-  <% else %>
-    <%= link_to chat.asker.name, chatroom_path(chat) %>
-    <% last_user = chat.messages.last.user  %>
-    <%= last_user == current_user ? "you:" : last_user.name %>
-    <%= chat.messages.last.content %>
+<div class="container">
+  <% @chatrooms.each do |chat| %>
+    <% if chat.asker == current_user %>
+      <div class="chat-all-image">
+        <%= cl_image_tag chat.helper.photo.key, class: "img-fluid" %>
+      </div>
+      <%= link_to chat.helper.name, chatroom_path(chat) %>
+      <% last_user = chat.messages.last.user  %>
+      <%= last_user == current_user ? "you:" : last_user.name %>
+      <%= chat.messages.last.content %>
+    <% else %>
+      <div class="chat-all-image">
+        <%= cl_image_tag chat.asker.photo.key, class: "img-fluid" %>
+      </div>
+      <%= link_to chat.asker.name, chatroom_path(chat) %>
+      <% last_user = chat.messages.last.user  %>
+      <%= last_user == current_user ? "you:" : last_user.name %>
+      <%= chat.messages.last.content %>
+    <% end %>
   <% end %>
-<% end %>
+</div>
