--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,3 +1,7 @@
+<div class="your-chats">
+  <h1>Your chats</h1>
+</div>
+
 <div class="container-chatroom">
   <% @chatrooms.each do |chat| %>
     <% if chat.asker == current_user %>
