--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -38,6 +38,12 @@
   }
 }
 
+.your-chats {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
 .container-chatroom {
   display: flex;
   justify-content: center;
