--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -6,19 +6,27 @@
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
-
+  .chat-top {
+    display: flex;
+    justify-content: space-between;
+    .chat-top-right{
+      align-self: center;
+      a {
+        text-decoration: none;
+        color: grey;
+        margin-right: 10px;
+      }
+    }
+  }
   h1 {
-    border-bottom: 1px solid $gray-200;
     margin-bottom: 0;
     padding: 1rem;
   }
-
   .messages {
     height: 100%;
     overflow: scroll;
     padding: 1rem;
   }
-
   #new_message {
     border-top: 1px solid $gray-200;
     padding: 1rem;
