fixed the positioning of the navbar to center

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -61,6 +61,6 @@
       <% end %>
     </ul>
   </div>
-
-  <%= render "shared/navbar" %>
 <div>
+
+<div class="container d-flex justify-content-center"><%= render "shared/navbar" %></div>
