--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,32 +18,36 @@
       <p><%= @user.about_me %></p>
     </div>
 
-    <h2> Reviews </h2>
-    <% if @user.reviews.empty? && @user.reviews_as_asker.empty? %>
-      <p>The first review is yet to come in!</p>
-    <% else %>
-
-      <ul>
-        <% @user.reviews.each do |review| %>
-          <% if review.asker_comment %>
-            <h3><%= review.post.user.name%> </h3>
-            <p>Rating :<%= "❤️" * review.asker_rating %></p>
-            <p><%= review.asker_comment %></p>
-          <% end %>
-        <% end %>
-        <% @user.reviews_as_asker.each do |review| %>
-          <% if review.helper_comment %>
-            <h3><%= review.user.name%> </h3>
-            <p>Rating :<%= "❤️" * review.helper_rating %></p>
-            <p><%= review.helper_comment %></p>
-          <% end %>
-        <% end %>
-        <% if @user.reviews.empty? && @user.reviews_as_asker.empty? %>
-          <p>There are no reviews to be displayed.</p>
-        <% end %>
-      </ul>
+<h2> Reviews </h2>
+  <% if @user.reviews.empty? && @user.reviews_as_asker.empty? %>
+    <p>The first review is yet to come in!</p>
+  <% else %>
+    <% @user.reviews.each do |review| %>
+      <% if review.asker_comment %>
+        <div class="review-container">
+          <div class="review-user-rating">
+            <div class="review-user-name"><%= review.post.user.name %></div>
+            <div class="review-rating"><%= "❤️" * review.asker_rating %></div>
+          </div>
+          <div class="review-comment"><%= review.asker_comment %></div>
+        </div>
+      <% end %>
     <% end %>
-  </div>
+    <% @user.reviews_as_asker.each do |review| %>
+      <% if review.helper_comment %>
+        <div class="review-container">
+          <div class="review-user-rating">
+            <div class="review-user-name"><%= review.user.name %></div>
+            <div class="review-rating"><%= "❤️" * review.helper_rating %></div>
+          </div>
+          <div class="review-comment"><%= review.helper_comment %></div>
+        </div>
+      <% end %>
+    <% end %>
+    <% if @user.reviews.empty? && @user.reviews_as_asker.empty? %>
+      <p>There are no reviews to be displayed.</p>
+    <% end %>
+  <% end %>
 
   <div class="container navbar ">
 
