--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,10 +8,12 @@
         <% if @post.user.photo.attached? %>
           <%= link_to user_path do %>
             <%= cl_image_tag @post.user.photo.key, class: "show-pfp" %>
+            <p>See my profile</p>
           <% end %>
         <% else %>
           <%= link_to user_path do %>
             <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Default_pfp.svg/2048px-Default_pfp.svg.png", class: "show-pfp" %>
+            <p>See my profile</p>
           <% end %>
         <% end %>
         <h1>This is <%= @post.user.name %> </h1>
@@ -22,6 +24,11 @@
       </div>
     </div>
   </div>
+
+  <%# <div class="show-see-profile-message">
+        <p>See my profile</p>
+  </div> %>
+
 
   <div class="container user-info">
     <div class="post-user-info">
