--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -6,9 +6,13 @@
   <div class="chat-top">
     <div class="chat-top-left">
       <% if current_user == @chatroom.helper %>
-        <h1>Chat with <%= @chatroom.asker.name %></h1>
+        <%= link_to user_path(@chatroom.asker) do %>
+        <h1>Chat with <strong><%= @chatroom.asker.name %></strong></h1>
+        <% end %>
       <% else %>
-        <h1>Chat with <%= @chatroom.helper.name %></h1>
+        <%= link_to user_path(@chatroom.helper) do %>
+        <h1>Chat with <strong><%= @chatroom.helper.name %></strong></h1>
+        <% end %>
       <% end %>
     </div>
     <div class="chat-top-right"><%= link_to "go back", dashboard_path %></div>
