--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -15,7 +15,7 @@
         <% end %>
       <% end %>
     </div>
-    <div class="chat-top-right"><%= link_to "go back", dashboard_path %></div>
+    <div class="chat-top-right"><%= link_to "go back", chatrooms_path %></div>
   </div>
 
   <div class="messages" data-chatroom-subscription-target="messages">
