--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -6,11 +6,11 @@
   <div class="chat-top">
     <div class="chat-top-left">
       <% if current_user == @chatroom.helper %>
-        <%= link_to user_path(@chatroom.asker) do %>
+        <%= link_to user_path(@chatroom.asker), class: "text-decoration-none text-dark" do %>
         <h1>Chat with <strong><%= @chatroom.asker.name %></strong></h1>
         <% end %>
       <% else %>
-        <%= link_to user_path(@chatroom.helper) do %>
+        <%= link_to user_path(@chatroom.helper), class: "text-decoration-none text-dark" do %>
         <h1>Chat with <strong><%= @chatroom.helper.name %></strong></h1>
         <% end %>
       <% end %>
