--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -355,5 +355,14 @@
 
     }
   }
-
+  .list-review {
+    padding-top: 0px;
+    a {
+      text-align: center  !important;
+      text-decoration: none !important;
+      color: black !important;
+      font-size: 20px !important;
+      font-weight: 500 !important;
+    }
+  }
 }
